--- a/TUGAS HCI/play.html
+++ b/TUGAS HCI/play.html
@@ -35,7 +35,7 @@
 			<label>Password </label>
 			<input id = "password" type = "password" placeholder="Enter Password [6-15]" value = "">
 			<input type="submit" value="Submit" name="Submit"/>
-			<a href="registeration.html">Register?</a>
+			<a href="registration.html">Register?</a>
 		</form>
 	</div>
 </main>
