--- a/TUGAS HCI/registration.html
+++ b/TUGAS HCI/registration.html
@@ -22,14 +22,14 @@
                 </div>
               </div>
                 <div>
-                    <button class="play" onclick="window.location.href = 'registration.html';">PLAY</button>
+                    <button class="play" onclick="window.location.href = 'play.html';">PLAY</button>
                 </div>
             </div>
             </nav>
     </header>
     <main>
         <div class = "left">
-            <p>Before You Play This Game,</p> 
+            <p>Before You Play This Game,</p>
             <br>
             <p>You need to Register Your Self</p>
         </div>
@@ -43,7 +43,7 @@
                 <input id="email" name="email" placeholder="Enter Email" type="text">
                 <br>
                 <label>Password :</label>
-                <input id = "password" type = "password" placeholder="Enter Password [6-15]" value = "">  
+                <input id = "password" type = "password" placeholder="Enter Password [6-15]" value = "">
                 <br>
                 <label>Gender :</label>
                 <input id="male" name="gender" type="radio" value="Male">
