fix link event.html

--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -15,7 +15,7 @@
     		<div class="dropdown-content">
 					<a href="index.html">Home</a>
 					<a href="play.html" class="small-dev">Play</a>
-      		<a href="#">Events</a>
+      		<a href="event.html">Events</a>
       		<a href="char.html">Charachters</a>
     		</div>
   		</div>
