--- a/TUGAS HCI/registration.html
+++ b/TUGAS HCI/registration.html
@@ -16,8 +16,8 @@
                 <button class="menu">MENU</button>
                 <div class="dropdown-content">
                         <a href="index.html">Home</a>
-                        <a href="play.html" class="small-dev">Play</a>
-                  <a href="#">Events</a>
+                        <a href="play.html" class="small-Sdev">Play</a>
+                  <a href="event.html">Events</a>
                   <a href="char.html">Charachters</a>
                 </div>
               </div>
