--- a/TUGAS HCI/play.html
+++ b/TUGAS HCI/play.html
@@ -15,6 +15,7 @@
     		<button class="menu">MENU</button>
     		<div class="dropdown-content">
 					<a href="index.html">Home</a>
+					<a href="gameplay.html">Gameplay</a>
       		<a href="event.html">Events</a>
       		<a href="char.html">Charachters</a>
     		</div>
