--- a/TUGAS HCI/char.html
+++ b/TUGAS HCI/char.html
@@ -17,8 +17,8 @@
     		<div class="dropdown-content">
 					<a href="index.html">Home</a>
 					<a href="play.html" class="small-dev">Play</a>
+					<a href="gameplay.html">Gameplay</a>
       		<a href="event.html">Events</a>
-      		<a href="char.html">Charachters</a>
     		</div>
   		</div>
 			<div>
