--- a/TUGAS HCI/registration.html
+++ b/TUGAS HCI/registration.html
@@ -15,8 +15,9 @@
                 <div class="dropdown">
                 <button class="menu">MENU</button>
                 <div class="dropdown-content">
-                        <a href="index.html">Home</a>
-                        <a href="play.html" class="small-Sdev">Play</a>
+                  <a href="index.html">Home</a>
+                  <a href="play.html" class="small-dev">Play</a>
+                  <a href="gameplay.html">Gameplay</a>
                   <a href="event.html">Events</a>
                   <a href="char.html">Charachters</a>
                 </div>
